# libdave

./: CONTRIBUTING.md  README.md
.github/actions/prepare-build/: action.yaml
.github/workflows/: artifacts.yaml  main.yaml
cpp/: CMakeLists.txt  Makefile  README.md  boringssl_cryptor.cpp  boringssl_cryptor.h  codec_utils.cpp  common.h  cryptor_manager.h  decryptor.cpp  decryptor.h  discord.py  encryptor.cpp  encryptor.h  frame_processors.cpp  frame_processors.h  logger.cpp  mls_key_ratchet.cpp  mls_key_ratchet.h
cpp/afl-driver/src/: main.cpp
cpp/includes/: array_view.h  dave.h  dave_interfaces.h  logger.h  version.h
cpp/includes/dave/: array_view.h  dave.h  dave_interfaces.h  logger.h  version.h
cpp/mls/: persisted_key_pair.cpp  persisted_key_pair.h  persisted_key_pair_null.cpp  session.cpp  session.h  user_credential.cpp
cpp/mls/detail/: persisted_key_pair.h  persisted_key_pair_apple.cpp  persisted_key_pair_generic.cpp  persisted_key_pair_null.cpp  persisted_key_pair_win.cpp
cpp/src/: bindings_capi.cpp  bindings_wasm.cpp  boringssl_cryptor.cpp  boringssl_cryptor.h  codec_utils.cpp  codec_utils.h  common.h  cryptor.cpp  cryptor.h  cryptor_manager.cpp  cryptor_manager.h  decryptor.cpp  decryptor.h  encryptor.cpp  encryptor.h  frame_processors.cpp  frame_processors.h  key_ratchet.h  logger.cpp  mls_key_ratchet.cpp  mls_key_ratchet.h  openssl_cryptor.cpp  openssl_cryptor.h  version.cpp
cpp/src/dave/: bindings_capi.cpp  bindings_wasm.cpp  boringssl_cryptor.cpp  boringssl_cryptor.h  codec_utils.cpp  codec_utils.h  common.h  cryptor.cpp  cryptor.h  cryptor_manager.cpp  cryptor_manager.h  decryptor.cpp  decryptor.h  encryptor.cpp  encryptor.h  frame_processors.cpp  frame_processors.h  key_ratchet.h  logger.cpp  logger.h  mls_key_ratchet.cpp  mls_key_ratchet.h  openssl_cryptor.cpp  openssl_cryptor.h  version.cpp  version.h
cpp/src/dave/mls/: parameters.cpp  parameters.h  persisted_key_pair.cpp  persisted_key_pair.h  persisted_key_pair_null.cpp  session.cpp  session.h  user_credential.cpp  user_credential.h  util.cpp  util.h
cpp/src/dave/mls/detail/: persisted_key_pair.h  persisted_key_pair_apple.cpp  persisted_key_pair_generic.cpp  persisted_key_pair_win.cpp
cpp/src/dave/utils/: clock.h  leb128.cpp  leb128.h  scope_exit.h
cpp/src/mls/: parameters.h  persisted_key_pair.cpp  persisted_key_pair.h  persisted_key_pair_null.cpp  session.cpp  session.h  user_credential.cpp  user_credential.h
cpp/src/mls/detail/: persisted_key_pair.h  persisted_key_pair_apple.cpp  persisted_key_pair_generic.cpp  persisted_key_pair_null.cpp  persisted_key_pair_win.cpp
cpp/test/: CMakeLists.txt  boringssl_cryptor_tests.cpp  codec_utils_tests.cpp  cryptor_manager_tests.cpp  cryptor_tests.cpp  dave_test.cpp  dave_test.h  external_sender.cpp  external_sender.h  static_key_ratchet.cpp  static_key_ratchet.h  xssl_cryptor_tests.cpp
cpp/test/capi/: CMakeLists.txt  basic_tests.c  external_sender_wrapper.cpp  external_sender_wrapper.h  test_helpers.c  test_helpers.h
cpp/vcpkg-alts/boringssl/overlay-ports/mlspp/: portfile.cmake  vcpkg.json
cpp/vcpkg-alts/openssl_1.1/: vcpkg.json
cpp/vcpkg-alts/openssl_1.1/overlay-ports/mlspp/: portfile.cmake  vcpkg.json
cpp/vcpkg-alts/openssl_3/: vcpkg.json
cpp/vcpkg-alts/openssl_3/overlay-ports/mlspp/: portfile.cmake  vcpkg.json
cpp/vcpkg-alts/wasm/: vcpkg.json
cpp/vcpkg-alts/wasm/overlay-ports/mlspp/: portfile.cmake  vcpkg.json
js/: .gitignore  jest.config.js  package.json  pnpm-lock.yaml  tsconfig.json
js/__tests__/: DisplayableCode-test.ts  KeyFingerprint-test.ts  KeySerialization-test.ts  PairwiseFingerprint-test.ts
js/src/: DisplayableCode.ts  wasm.ts
js/wasm/: .gitignore
samples/typescript/: DaveSessionManager.ts  README.md
